--- a/frontend/src/styleSheet.css
+++ b/frontend/src/styleSheet.css
@@ -126,10 +126,6 @@ body {
   }
 
   .sign-up-button{
-    margin-top: 3rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     padding: 10px;
     width: 200px;
     height: 54px;
@@ -152,7 +148,7 @@ body {
 
   .topLightimg{
     position: absolute;
-    left: 371.7px;
+    left: 405px;
     top: -10.87px;
   }
 
@@ -166,5 +162,10 @@ body {
     background-color: var(--secondaryBlue);
   }
 
+  .tableimg{
+    position: absolute;
+    left: 900px;
+    top: 550px;
+  }
 
   
