--- a/frontend/src/styleSheet.css
+++ b/frontend/src/styleSheet.css
@@ -62,6 +62,10 @@ body {
     color: rgba(0, 0, 0, 0.349);
   }
 
+  .underline {
+    text-decoration: underline;
+  }
+
   .container {
     flex-wrap: wrap;
     flex-direction: column;
