[US1.1] (Rahaf) Make logo clickable

--- a/frontend/src/styleSheet.css
+++ b/frontend/src/styleSheet.css
@@ -150,10 +150,12 @@ body {
     align-items: center;
   }
 
-  .topLightimg{
+  .topLightimg {
     position: absolute;
-    left: 405px;
-    top: -10.87px;
+    top: 10%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
   }
 
   .signUpText{
