--- a/frontend/src/styleSheet.css
+++ b/frontend/src/styleSheet.css
@@ -71,7 +71,7 @@ body {
     
   }
 
-  .navBarLinks{
+  .nav-bar-links{
     margin-left: 3rem;
     font-size: large;
   }
@@ -87,7 +87,7 @@ body {
     background-color: var(--lightBlue);
   }
 
-  .letsGetText{
+  .lets-get-text{
     color: var(--primaryBlue);
     font-size: 50px;
     font-weight: bold;
@@ -138,7 +138,7 @@ body {
     border-radius: 25px;
   }
 
-  .bottomBar{
+  .bottom-bar{
     background-color: var(--secondaryBlue);
   }
 
@@ -149,7 +149,7 @@ body {
     align-items: center;
   }
 
-  .topLightimg {
+  .top-lightimg {
     position: absolute;
     top: 10%;
     left: 50%;
@@ -157,14 +157,14 @@ body {
     transform: translate(-50%, -50%);
   }
 
-  .signUpText{
+  .sign-up-text{
     font-size: 34;
     font-weight: bold;
     color: var(--primaryBlue);
     text-align: center;
   }
 
-  .secondarColor{
+  .secondary-color{
     background-color: var(--secondaryBlue);
   }
 
@@ -176,7 +176,7 @@ body {
     transform: translate(-50%, -50%);
   }
 
-  .uploadePhoto{
+  .uploade-photo{
     width: 346px;
     height: 289px;
     background: #FFFFFF;
@@ -184,23 +184,18 @@ body {
     border-radius: 25px;
   }
 
-  .bgColor{
+  .bg-color{
     position: relative;
 
 
     background: #EFF9FF;
   }
 
-  .photoBox{
+  .photo-box{
     width: 315.73px;
     height: 263.65px;
     border-radius: 25px;
   }
 
- 
-
-  .addRecHeadings{
-    color: var(--primaryBlue);
-  }
 
   
