--- a/frontend/src/styleSheet.css
+++ b/frontend/src/styleSheet.css
@@ -1,201 +1,206 @@
 body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-      sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-      monospace;
-  }
-  a {
-    text-decoration: none;
-    color: black;
-  }
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
-  * {
-    @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap");
-    --primaryBlue: #0671B7;
-    --secondaryBlue: #E0F3FF;
-    --lightBlue:  #F9FDFF;
-  }
-  
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
 
-  h1 {
-    font-size: 34;
-  }
-  
-  h2 {
-    font-size: 20;
-    font-weight: bold;
-  }
-  
-  h3 {
-    font-size: 20;
-    font-weight: 600;
-  }
-  
-  p {
-    font-size: 16px;
-  }
+* {
+  @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap");
+  --primaryBlue: #0671b7;
+  --secondaryBlue: #e0f3ff;
+  --lightBlue: #f9fdff;
+}
 
+h1 {
+  font-size: 34;
+}
 
-  h5{
-    font-size: 18;
-    font-weight: bold;
-  }
-  
-  ul {
-    font-size: 16px;
-  }
-  
-  .centered-text {
-    text-align: center;
-  }
+h2 {
+  font-size: 20;
+  font-weight: bold;
+  color: #0671b7;
+}
 
-  a:hover {
-    text-decoration: none;
-    color: rgba(0, 0, 0, 0.349);
-  }
+h3 {
+  font-size: 20;
+  font-weight: 600;
+}
 
-  .underline {
-    text-decoration: underline;
-  }
+p {
+  font-size: 16px;
+}
 
-  .container {
-    flex-wrap: wrap;
-    flex-direction: column;
-    
-  }
+h5 {
+  font-size: 18;
+  font-weight: bold;
+}
 
-  .nav-bar-links{
-    margin-left: 3rem;
-    font-size: large;
-  }
+ul {
+  font-size: 16px;
+}
 
-  .left{
-    margin-left: 8rem;
-  }
-  .right{
-    margin-right: 8rem;
-  }
+.centered-text {
+  text-align: center;
+}
 
-  .footer{
-    background-color: var(--lightBlue);
-  }
+a:hover {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.349);
+}
 
-  .lets-get-text{
-    color: var(--primaryBlue);
-    font-size: 50px;
-    font-weight: bold;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-   
-  }
+.underline {
+  text-decoration: underline;
+}
 
-  .cooking{
-    color: var(--primaryBlue);
-    font-size: 85px;
-    font-weight: bolder;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-  }
+.container {
+  flex-wrap: wrap;
+  flex-direction: column;
+}
 
-  .center-horiz {
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .center-vert {
-    margin-top:auto;
-    margin-bottom: auto;
-  }
+.nav-bar-links {
+  margin-left: 3rem;
+  font-size: large;
+}
 
-  .grid-container {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: 80vh;
-    align-items: center;
-    justify-items: center;
-  }
+.left {
+  margin-left: 8rem;
+}
+.right {
+  margin-right: 8rem;
+}
 
-  .centerthis {
-    align-self: center;
-    justify-self: center;
-  }
+.footer {
+  background-color: var(--lightBlue);
+}
 
-  .sign-up-button{
-    padding: 10px;
-    width: 200px;
-    height: 54px;
-    color: white;
-    background: var(--primaryBlue);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 25px;
-  }
+.lets-get-text {
+  color: var(--primaryBlue);
+  font-size: 50px;
+  font-weight: bold;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
 
-  .bottom-bar{
-    background-color: var(--secondaryBlue);
-  }
+.cooking {
+  color: var(--primaryBlue);
+  font-size: 85px;
+  font-weight: bolder;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
 
-  .EasilyLandingPage{
-    font-weight: 600;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-  }
+.center-horiz {
+  margin-left: auto;
+  margin-right: auto;
+}
+.center-vert {
+  margin-top: auto;
+  margin-bottom: auto;
+}
 
-  .top-lightimg {
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: 80vh;
+  align-items: center;
+  justify-items: center;
+}
 
-  .sign-up-text{
-    font-size: 34;
-    font-weight: bold;
-    color: var(--primaryBlue);
-    text-align: center;
-  }
+.centerthis {
+  align-self: center;
+  justify-self: center;
+}
 
-  .secondary-color{
-    background-color: var(--secondaryBlue);
-  }
+.sign-up-button {
+  padding: 10px;
+  width: 200px;
+  height: 54px;
+  color: white;
+  background: var(--primaryBlue);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 25px;
+}
 
-  .tableimg{
-    position: absolute;
-    top: 110%;
-    left: 76%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
+.bottom-bar {
+  background-color: var(--secondaryBlue);
+}
 
-  .uploade-photo{
-    width: 346px;
-    height: 289px;
-    background: #FFFFFF;
-    box-shadow: 0px -10px 30px rgba(0, 0, 0, 0.06);
-    border-radius: 25px;
-  }
+.EasilyLandingPage {
+  font-weight: 600;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
 
-  .bg-color{
-    position: relative;
+.top-lightimg {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
 
+.sign-up-text {
+  font-size: 34;
+  font-weight: bold;
+  color: var(--primaryBlue);
+  text-align: center;
+}
 
-    background: #EFF9FF;
-  }
+.secondary-color {
+  background-color: var(--secondaryBlue);
+}
 
-  .photo-box{
-    width: 315.73px;
-    height: 263.65px;
-    border-radius: 25px;
-  }
+.tableimg {
+  position: absolute;
+  top: 110%;
+  left: 76%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
 
+.uploade-photo {
+  position: relative;
+  width: 346px;
+  height: 40px;
+  background: var(--secondaryBlue);
+}
 
-  
+.bg-color {
+  position: relative;
+  background: #FFFFFF;
+}
+
+.photo-box {
+  position: relative;
+}
+
+.recipeTitle {
+  margin-top:20px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 125.29%;
+  /* or 20px */
+
+  letter-spacing: 0.0120588em;
+
+  color: #0671b7;
+}
+
+.setGridMargin {
+  margin-top: 20px;
+}
