--- a/frontend/src/styleSheet.css
+++ b/frontend/src/styleSheet.css
@@ -198,6 +198,10 @@ body {
   .box{
         align-items: center;
         justify-content: center;
+        overflow:auto;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        margin-left: 7rem;
   }
 
   .recipe-img{
@@ -206,6 +210,27 @@ body {
   }
 
 
+  .white-box{
+    width: 346px;
+    height: 293px;
+    left: 88px;
+    top: 601px;
+    box-shadow: 0px -10px 30px rgba(0, 0, 0, 0.06);
+    border-radius: 25px;
+    background: #FFFFFF;
+  }
 
+  
+
+  .graph-parts {
+    display: inline-block;
+    max-width: 1700px;
+    margin-left: 6rem;
+    margin-right: 6rem;
+  }
+
+  .right-table{
+    float:right;
+  }
 
   
