--- a/frontend/src/styleSheet.css
+++ b/frontend/src/styleSheet.css
@@ -1,3 +1,4 @@
+html,
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -6,6 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding: 0;
+  height: 100%;
 }
 
 code {
@@ -22,6 +24,16 @@ a {
   --primaryBlue: #0671b7;
   --secondaryBlue: #e0f3ff;
   --lightBlue: #f9fdff;
+  --white: #fff;
+}
+
+.margin-top-70 {
+  margin-top: 70px;
+}
+
+.overflow {
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .landing-container {
@@ -82,6 +94,7 @@ a:hover {
 .left {
   margin-left: 8rem;
 }
+
 .right {
   margin-right: 8rem;
 }
@@ -94,18 +107,12 @@ a:hover {
   color: var(--primaryBlue);
   font-size: 50px;
   font-weight: bold;
-  display: flex;
-  justify-content: left;
-  align-items: center;
 }
 
-.cooking {
+.cooking-text {
   color: var(--primaryBlue);
   font-size: 85px;
   font-weight: bolder;
-  display: flex;
-  justify-content: left;
-  align-items: center;
 }
 
 .center-horiz {
@@ -144,11 +151,13 @@ a:hover {
   background-color: var(--secondaryBlue);
 }
 
-.EasilyLandingPage {
-  font-weight: 600;
-  display: flex;
-  justify-content: left;
-  align-items: center;
+.hero-text {
+  height: 100%;
+}
+
+.hero-tagline {
+  font-size: 30px;
+  margin: 40px 0;
 }
 
 .top-lightimg {
@@ -166,21 +175,24 @@ a:hover {
   text-align: center;
 }
 
-.PageHeight {
-  height: 120vh;
+.blue-background {
   background-color: var(--secondaryBlue);
+}
+
+.light-blue-background {
+  background-color: var(--lightBlue);
 }
 
 .secondary-color {
   background-color: var(--secondaryBlue);
 }
 
-.tableimg {
-  position: absolute;
-  top: 110%;
-  left: 76%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+@media (min-width: 768px) {
+  .tableimg {
+    position: absolute;
+    bottom: 0;
+    right: 15%;
+  }
 }
 
 .uploade-photo {
