add box and width:1600 to addRecipe page

--- a/frontend/src/styleSheet.css
+++ b/frontend/src/styleSheet.css
@@ -108,7 +108,7 @@ a:hover {
 }
 
 .footer {
-  background-color: var(--secondaryBlue);
+  background-color: var(--lightBlue);
 }
 
 .lets-get-text {
