--- a/frontend/src/styleSheet.css
+++ b/frontend/src/styleSheet.css
@@ -66,10 +66,19 @@ h3 {
 p {
   font-size: 16px;
 }
+h4 {
+  font-size: 18;
+  color: #0671b7;
+}
 
 h5 {
   font-size: 18;
   font-weight: bold;
+}
+h6 {
+  font-size: 4rem;
+  font-weight: bold;
+  color: #0671b7;
 }
 
 ul {
@@ -281,4 +290,16 @@ a:hover {
 
 .setGridMargin {
   margin-top: 20px;
+}
+
+.welcome-parts1 {
+  max-width: 1700px;
+  margin-left: 15rem;
+  margin-right: 6rem;
+  margin-top: 5rem;
+}
+.welcome-parts2 {
+  max-width: 1700px;
+  margin-left: 15rem;
+  margin-right: 6rem;
 }
