--- a/frontend/src/styleSheet.css
+++ b/frontend/src/styleSheet.css
@@ -229,6 +229,21 @@ a:hover {
     
     border-radius: 25px;
     background: #FFFFFF;
+    box-shadow: 0px -10px 30px rgba(0, 0, 0, 0.06);
+  }
+
+  .recipe-title{
+    position: absolute;
+    width: 411px;
+    height: 48px;
+    left: 88px;
+    top: 152px;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 125.29%;
+    letter-spacing: 0.0120588em;
+    color: #0671B7;
+
   }
 
   
@@ -302,4 +317,27 @@ a:hover {
   max-width: 1700px;
   margin-left: 15rem;
   margin-right: 6rem;
+}
+
+
+.tags{
+  display: inline-block;
+  flex-direction: row;
+  align-items: center;
+  padding: 2px 12px;
+  gap: 6px;
+  background: #E5FDF6;
+  border-radius: 12px;
+  position: "absolute";
+}
+
+.tag-font{
+  width: 43px;
+  height: 20px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 20px;
+  color: #0671B7;
+
 }
