--- a/frontend/src/styleSheet.css
+++ b/frontend/src/styleSheet.css
@@ -339,7 +339,22 @@ a:hover {
   font-size: 15px;
   line-height: 20px;
   color: #0671B7;
+}
 
+.ingredients-font{
+  width: 335px;
+  height: 24px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.5px;
+  color: #0671B7;
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
 }
 
 .ingredients-box{
@@ -354,3 +369,4 @@ a:hover {
   box-shadow: 0px -10px 30px rgba(0, 0, 0, 0.06);
   border-radius: 25px;
 }
+
