--- a/frontend/src/styleSheet.css
+++ b/frontend/src/styleSheet.css
@@ -370,3 +370,15 @@ a:hover {
   border-radius: 25px;
 }
 
+.method-box{
+  position: relative;
+  display: inline-block;
+  width: 346px;
+  height: 62px;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  background: #FFFFFF;
+  box-shadow: 0px -10px 30px rgba(0, 0, 0, 0.06);
+  border-radius: 25px;
+}
