--- a/frontend/src/styleSheet.css
+++ b/frontend/src/styleSheet.css
@@ -238,7 +238,7 @@ a:hover {
     height: 48px;
     left: 88px;
     top: 152px;
-    font-weight: 400;
+    font-weight: 800;
     font-size: 30px;
     line-height: 125.29%;
     letter-spacing: 0.0120588em;
@@ -358,12 +358,11 @@ a:hover {
 }
 
 .ingredients-box{
-  position: relative;
-  display: inline-block;
+  display: block;
   width: 346px;
   height: 62px;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   padding: 0px;
   background: #FFFFFF;
   box-shadow: 0px -10px 30px rgba(0, 0, 0, 0.06);
@@ -371,8 +370,7 @@ a:hover {
 }
 
 .method-box{
-  position: relative;
-  display: inline-block;
+  display: block;
   width: 346px;
   height: 62px;
   flex-direction: column;
