[US17] (Rahaf) changed add Recipe button position

--- a/frontend/src/styleSheet.css
+++ b/frontend/src/styleSheet.css
@@ -307,7 +307,7 @@ a:hover {
 }
 
 .addRecipeButton{
-  margin-left: 90vw;
-  margin-top: 40vw;
+  margin-left: 85vw;
+  margin-top: 4rem;
   position: fixed;
 }
