--- a/frontend/src/styleSheet.css
+++ b/frontend/src/styleSheet.css
@@ -388,3 +388,27 @@ a:hover {
   grid-template-columns:85% 50%;
   grid-template-rows: 20vh;
 }
+
+.edit-recipe-grid{
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto;
+  grid-template-rows: auto auto auto auto auto auto;
+}
+
+.ingredient-grid{
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 3;
+  grid-row-end: auto;
+  justify-items: end;
+  align-items: start;
+}
+
+.steps-grid{
+  grid-column-start: 5;
+  grid-column-end: 6;
+  grid-row-start: 3;
+  grid-row-end: auto;
+  justify-items: end;
+  align-items: start;
+}
