--- a/frontend/src/styleSheet.css
+++ b/frontend/src/styleSheet.css
@@ -388,15 +388,25 @@ a:hover {
 }
 
 .method-box{
-  display: block;
+  display: flex;
   width: 346px;
-  height: 62px;
+  min-height: 62px;
+  height: fit-content;
   flex-direction: column;
-  align-items: flex-start;
-  padding: 0px;
   background: #FFFFFF;
   box-shadow: 0px -10px 30px rgba(0, 0, 0, 0.06);
   border-radius: 25px;
+  word-wrap: break-word;
+}
+
+.method-font{
+  width: 335px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.5px;
+  color: #0671B7;
+  word-wrap: break-word;
 }
 .addRecipeButton{
   margin-top: 4rem;
