--- a/frontend/src/styleSheet.css
+++ b/frontend/src/styleSheet.css
@@ -139,8 +139,8 @@ a:hover {
 }
 
 .center-horiz {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 .center-vert {
   margin-top: auto;
@@ -216,7 +216,7 @@ a:hover {
   overflow: auto;
   margin-top: 20px;
   margin-bottom: 20px;
-  margin-left: 7rem;
+  margin-left: auto;
   border-radius: 25px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
 }
@@ -227,9 +227,8 @@ a:hover {
 }
 
 .white-box {
-  width: "100%";
-  height: 293px;
-
+  width: "auto";
+  height: "auto";
   border-radius: 25px;
   background: #ffffff;
   box-shadow: 0px -10px 30px rgba(0, 0, 0, 0.06);
@@ -268,13 +267,11 @@ a:hover {
 .graph-parts {
   display: inline-block;
   max-width: 1700px;
-  margin-left: 6rem;
-  margin-right: 6rem;
   margin-bottom: 6rem;
 }
 
 .right-table {
-  float: left;
+  float: right;
 }
 
 .plus-icon {
@@ -409,10 +406,11 @@ a:hover {
   word-wrap: break-word;
 }
 .addRecipeButton {
-  margin-top: 4rem;
+  margin-top: 2rem;
+  margin-left: 4.5rem;
+  margin-bottom: 0rem;
   display: grid;
-  grid-template-columns: 85% 50%;
-  grid-template-rows: 20vh;
+  grid-template-columns: 80% 50%;
 }
 
 .edit-recipe-grid {
