--- a/frontend/src/styleSheet.css
+++ b/frontend/src/styleSheet.css
@@ -235,7 +235,7 @@ a:hover {
 }
 
 .notes-box {
-  width: fit-content;
+  width: "100%";
   height: fit-content;
   display: flex;
   border-radius: 25px;
